# randomness-testing-toolkit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  randomness-testing-toolkit
.github/workflows/: build-check.yml
cmake/: detect_version.cmake  remove_cxx_flags.cmake
configuration_files/: config.json  config.xml  default-8GB.json  rtt-settings.conf  rtt-settings.json  toolkit.settings
configuration_files/based-on-data-length/: 1000MB.json  100MB.json  10MB.json  16MB.json  1MB.json  250MB.json  500MB.json  50MB.json  75MB.json  sample.json
configuration_files/based_on_data_length/: 10MB.json  16MB.json  250MB.json  400MB.json  400MB_syso.json  75MB.json  sample.json
libs/cephes/: cephes.cpp  cephes.h
libs/easylogging/: easylogging++.h
libs/tinyXML/: CMakeLists.txt  makefile  tinyXML_LICENCE.txt  xmlexception.h  xmlproc.cpp  xmlproc.h
rtt/: DieharderBattery.cpp  DieharderBattery.h  DieharderRunner.cpp  InterfaceCreator.cpp  InterfaceCreator.h  NistStsBattery.cpp  NistStsBattery.h  StatBatteryInterface.h  TestU01Battery.cpp  TestU01Battery.h  ToolkitConstants.cpp  ToolkitConstants.h  ToolkitOptions.cpp  ToolkitOptions.h  Utils.cpp  Utils.h  Version.h.in  XMLproc.cpp  XMLproc.h  bugexception.h  clioptions.cpp  clioptions.cpp.autosave  clioptions.h  constants.cpp  constants.h  globalcontainer.cpp  globalcontainer.h  globals.cpp  globals.h  interfacecreator.cpp  interfacecreator.h  logger.cpp  logger.h  main.cpp  options.cpp  options.h  rttexception.h  strings.cpp  strings.h  toolkitsettings.cpp  (+4 more)
rtt/batteries/: batteryfactory-batt.h  dieharder.cpp  (+33 more)
(+70 files in other folders)
